--- a/app/src/main/res/layout/main_recycleview.xml
+++ b/app/src/main/res/layout/main_recycleview.xml
@@ -38,6 +38,17 @@
                     android:src="@drawable/im_follow_star_news"
                     android:background="?selectableItemBackground"/>
 
+            <ImageButton
+                    android:id="@+id/bt_ic_starborder_favorite"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="4dp"
+                    android:src="@drawable/im_follow_star_news"
+                    android:background="?selectableItemBackground"
+                    android:visibility="invisible"/>
+
             <TextView
                     android:id="@+id/text_topic"
                     android:layout_width="330dp"
