--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,6 +5,9 @@
 
 
     <group android:checkableBehavior="single">
+        <item android:id="@+id/menu_list_news"
+              android:title="All News"
+              android:icon="@drawable/ic_item_list_news"/>
         <item android:id="@+id/menu_my_favorite"
               android:title="My Favorite"
               android:icon="@drawable/ic_check_starborder"/>
