--- a/app/src/main/res/layout/main_recycleview.xml
+++ b/app/src/main/res/layout/main_recycleview.xml
@@ -28,26 +28,29 @@
         <RelativeLayout android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
 
-            <ImageButton
+            <ImageView
                     android:id="@+id/bt_ic_starborder"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="4dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginLeft="2dp"
+                    android:padding="6dp"
                     android:src="@drawable/im_follow_star_news"
-                    android:background="?selectableItemBackground"/>
+                    android:background="?android:selectableItemBackgroundBorderless"   />
 
-            <ImageButton
+            <ImageView
                     android:id="@+id/bt_ic_starborder_favorite"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="4dp"
+                    android:padding="6dp"
                     android:src="@drawable/im_follow_star_news"
                     android:background="?selectableItemBackground"
-                    android:visibility="invisible"/>
+                    android:visibility="invisible" />
 
             <TextView
                     android:id="@+id/text_topic"
