--- a/app/src/main/res/layout/main_recycleview.xml
+++ b/app/src/main/res/layout/main_recycleview.xml
@@ -46,9 +46,10 @@
                     android:layout_height="40dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="4dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginLeft="2dp"
                     android:padding="6dp"
-                    android:src="@drawable/im_follow_star_news"
+                    android:src="@drawable/ic_cancel_item_news"
                     android:background="?selectableItemBackground"
                     android:visibility="invisible" />
 
