--- a/app/src/main/res/layout/main_recycleview.xml
+++ b/app/src/main/res/layout/main_recycleview.xml
@@ -50,7 +50,7 @@
                     android:layout_marginLeft="2dp"
                     android:padding="6dp"
                     android:src="@drawable/ic_cancel_item_news"
-                    android:background="?selectableItemBackground"
+                    android:background="?android:selectableItemBackgroundBorderless"
                     android:visibility="invisible" />
 
             <TextView
